# pytest-splunk-addon

./: .addonmatrix  .coveragerc  .env  .fossa.yml  .gitignore  .gitmodules  .ignore_splunk_internal_errors  .licenserc.yaml  .pre-commit-config.yaml  .readthedocs.yml  .releaserc  404.html  Dockerfile  Dockerfile.splunk  Dockerfile.tests  Dockerfile.uf  LICENSE  MANIFEST.in  Makefile  NOTICE  README-test.md  README.md  README.rst  authorize.conf  capture_ps.sh  cim-separation-proposal.md  config.env  deploy.env  docker-compose-ci.yml  docker-compose.yml  entrypoint.sh  events.pickle  index.html  indexes.conf  k3s.sh  kubernetes_migration  mkdocs.yml  objects.inv  pyproject.toml  pytest-ci.ini  (+12 more)
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: aggrements.yaml  agreements.yaml  black-style-check.yml  build-test-release.yml  cla.yaml  docs.yml  exclude-patterns.txt  fossa-test.yml  main.yml  package_runner.yml  pre-commit.yml  pylint.yml  pythonpackage.yml  review_dog_misspell.yml  review_flake8.yml  sr-release.sh  style-checker.yaml  test_circleci.yml  test_docs.yml  test_external_splunk.yml  test_matrix.yml  unit_tests.yml
api_reference/addon_parser/: index.html
api_reference/api_reference/: index.html
api_reference/app_test_generator/: index.html
api_reference/cim_compliance_report/: index.html
api_reference/cim_tests/: index.html
api_reference/event_ingestion/: index.html
api_reference/fields_tests/: index.html
api_reference/index_time_tests/: index.html
api_reference/sample_generation/: index.html
cim_compliance/: index.html
cim_tests/: index.html
common_tests/: index.html
contributing/: index.html
docs/: change_log.md  cim_compliance.md  cim_compliance.rst  cim_testcase.rst  cim_tests.md  cim_tests.rst  common_tests.md  common_tests.rst  conf.py  contributing.md  field_testcase.rst  field_tests.md  field_tests.rst  generate_conf.md  generate_conf.rst  how_to_use.md  how_to_use.rst  index.md  index.rst  index_time_tests.md  index_time_tests.rst  overview.md  overview.rst  release_history.rst  release_notes.md  requirement_tests.md  requirements.txt  sample_generator.md  sample_generator.rst  troubleshoot.md  troubleshoot.rst
docs/api_reference/: addon_basic.md  addon_basic.rst  addon_parser.md  addon_parser.rst  api_reference.md  api_reference.rst  app_test_generator.md  app_test_generator.rst  cim_compliance_report.md  cim_tests.md  cim_tests.rst  event_ingestion.md  event_ingestion.rst  fields_tests.md  fields_tests.rst  index_time_tests.md  index_time_tests.rst  sample_generation.md  sample_generation.rst
field_tests/: index.html
generate_conf/: index.html
how_to_use/: index.html
index_time_tests/: index.html
k8s_manifests/: deployment.yaml  namespace.yaml  sc4s_deployment.yaml  sc4s_deployment.yml  sc4s_service.yaml  service.yaml  splunk-operator-install.yml  splunk.yml  splunk_operator_install.yml  test_runner_deployment.yaml  uf_deployment.yml
k8s_manifests/sc4s/: sc4s_destroy.sh  sc4s_service.yaml  sc4s_setup.sh
k8s_manifests/splunk_standalone/: splunk-operator-install.yaml  splunk_destroy.sh  splunk_setup.sh  splunk_standalone.yaml
k8s_manifests/uf/: uf_deployment.yml
pytest_splunk_addon/: .ignore_splunk_internal_errors  __init__.py  _version.py  addon_basic.py  app_test_generator.py  docker_class.py  kubernetes_helper.py  plugin.py  splunk.py  utils.py
pytest_splunk_addon/CIM_Models/: datamodel_definition.py
pytest_splunk_addon/addon_parser/: __init__.py  eventtype_parser.py  fields.py  parser_cache.py  props_parser.py  savedsearches_parser.py  tags_parser.py  transforms_parser.py
pytest_splunk_addon/cim_compliance/: __init__.py  base_report.py  base_table.py  cim_report_generator.py  markdown_report.py  markdown_table.py  plugin.py
pytest_splunk_addon/cim_tests/: DatamodelSchema.json  __init__.py  base_schema.py  data_model.py  data_model_handler.py  data_set.py  field_test_adapter.py  field_test_helper.py  json_schema.py  test_generator.py  test_templates.py
pytest_splunk_addon/data_models/: Alerts.json  Authentication.json  Certificates.json  Change.json  Compute_Inventory.json  DLP.json  Data_Access.json  Databases.json  Email.json  Endpoint.json  Intrusion_Detection.json  Malware.json  Network_Resolution.json  Network_Sessions.json  Network_Traffic.json  Performance.json  Ticket_Management.json  Updates.json  Vulnerabilities.json  Web.json
pytest_splunk_addon/event_ingestors/: __init__.py  base_event_ingestor.py  file_monitor_ingestor.py  hec_event_ingestor.py  hec_metric_ingestor.py  hec_raw_ingestor.py  ingestor_helper.py  sc4s_event_ingestor.py
pytest_splunk_addon/fields_tests/: __init__.py  field_bank.py  requirement_test_datamodel_tag_constants.py  sample_parser.py  test_generator.py  test_templates.py
pytest_splunk_addon/helmut/: __init__.py
pytest_splunk_addon/helmut_lib/: SearchUtil.py  __init__.py
pytest_splunk_addon/index_tests/: __init__.py  key_fields.py  test_generator.py  test_templates.py
pytest_splunk_addon/sample_generation/: __init__.py  pytest_splunk_addon_data_parser.py  rule.py  sample_event.py  sample_generator.py  sample_stanza.py  sample_xdist_generator.py  schema.xsd  time_parser.py
pytest_splunk_addon/standard_lib/: __init__.py  addon_basic.py  addon_parser.py  addon_requirements_basic.py  addon_tests.py  app_test_generator.py  app_tests.py  base_test_generator.py  cim_test_generator.py  cim_tests.py  data_model.py  data_set.py  (+7 more)
release_notes/: index.html
requirement_tests/: index.html
sample_generator/: index.html
sc4s/: Dockerfile.sc4s  sc4s.service
splunk-cim-models/: pyproject.toml
splunk-cim-models/splunk_cim_models/: CommonFields.json  __init__.py  datamodel_definition.py
splunk-cim-models/splunk_cim_models/data_models/: Change.json  Data_Access.json  Interprocess Messaging.json  Network_Traffic.json  Performance.json
tests/: Dockerfile  __init__.py  conftest.py  constants.py  docker-compose.yml  enable_saved_search_conftest.py  test_cim_report.py  test_junit_parser.py  test_splunk_addon.py
troubleshoot/: index.html
(+565 files in other folders)
