[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
# ensure that the LICENSE file is included in the built wheels
license_file = LICENSE

[devpi:upload]
formats=sdist,bdist_wheel

[versioneer]
VCS = git
style = pep440
versionfile_source = pytest_splunk_addon/_version.py
versionfile_build = pytest_splunk_addon/_version.py
tag_prefix = v