[project]
name = "splunk-cim-models"
version = "0.1.0"
description = "Splunk CIM (Common Information Model) data model definitions and schemas"
authors = [{name = "Splunk", email = "addonfactory@splunk.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["splunk_cim_models*"]

[tool.setuptools.package-data]
splunk_cim_models = ["**/*.json"]
